--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@ and is in no way endorsed by said user.-->
 	}
 	@media screen and (max-device-width:767px){
 		.two-p-font-dark{
-			font-size:.675rem;
+			font-size:1rem;
 		}
 		.two-p-font{
-			font-size:.675rem;
+			font-size:1rem;
 		}
 		.rpg-header{
 
@@ -73,7 +73,7 @@ and is in no way endorsed by said user.-->
 			display:flex;
 			flex-direction:row;
 			flex-wrap:wrap;
-			font-size:.675rem;
+			font-size:1rem;
 		}
 		.col-a{
 			width:100%;
@@ -94,7 +94,7 @@ and is in no way endorsed by said user.-->
 		#statusCon{
 			border: 1px solid #111111;
 			width:60%;
-			font-size:.675rem;
+			font-size:1.2rem;
 
 		}
 		#statusCon.fade{
@@ -104,7 +104,7 @@ and is in no way endorsed by said user.-->
 			width:40%;
 		}
 		.col-c button{
-			font-size:.675rem;
+			font-size:1.2rem;
 		}
 	}
 	@media screen and (min-device-width:768px){
