--- a/index.html
+++ b/index.html
@@ -344,13 +344,10 @@ and is in no way endorsed by said user.-->
 	function sn0Dia() {
 		var pMake0 = document.createElement("p");
 		var pMake1 = document.createElement("p");
-		var pMake2 = document.createElement("p");
-		pMake0.textContent = "It's Saturday. This has been a long work week, and you deserve to take some time to unwind."
-		pMake1.textContent = "There are events on the Outdoor Adventure Program website, and on the BOSS Facebook feed. You can also go out drinking."
-		pMake2.textContent = "What would you like to do?"
+		pMake0.textContent = "It's Saturday. This has been a long work week, and you deserve to take some time to unwind. There are events on the Outdoor Adventure Program website, and on the BOSS Facebook feed. You can also go out drinking."
+		pMake1.textContent = "What would you like to do?"
 		rpgDialog.appendChild(pMake0);
 		setTimeout(function() {rpgDialog.appendChild(pMake1);}, 2500);
-		setTimeout(function() {rpgDialog.appendChild(pMake2);}, 5000);
 		optSet0();
 	}
 	function sn1Dia(){
