--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ and is in no way endorsed by said user.-->
     #statusCon{
       border: 1px solid #111111;
       width:60%;
-      font-size:1rem;
+      font-size:.85rem;
 
     }
     #statusCon.fade{
