--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@ and is in no way endorsed by said user.-->
     .two-p-font{
       font-size:1rem;
     }
-    .rpg-header{
-
+    .rpgDialog{
+      font-size:.85rem;
     }
     .game-con{
       width:95% !important;
